# technical_sur_3

./: .env  .env.app1  README.md  celerybeat-schedule  poetry-added.txt  pyproject.toml
app1/: .env.app1  .env.app1.template  .env.template  exceptions.py  main.py
app1/alembic/: env.py
app1/alembic/versions/: 2025_03_07_1002-17e3fe87b170_create_users_table.py  2025_03_07_1259-dcda53283685_create_users_table.py  2025_03_11_1213-d9a5a51d7d59_create_users_table.py  2025_03_11_1318-7a5f772002de_create_access_token_table.py  2025_03_13_1203-0acc9dc17320_add_displayed_name_to_users.py  2025_03_13_1208-cc66f3f4e5eb_renamed_displayed_name_in_users.py  2025_03_13_1304-b85fcf2ff8de_renamed_display_name_in_users.py  2025_03_25_1617-d28e6449af71_brands_products_images_tables_created.py  2025_03_26_1105-9e13b02622f2_brands_products_images_tables_ondelete_.py  2025_03_26_1241-88ef6a831673_brands_products_images_tables_added.py  2025_03_27_1011-37bddd3fed8c_brands_products_images_tables_added.py  2025_03_27_1355-2b43d6e8bcb3_brands_products_images_tables_added.py  2025_03_27_1735-86832991ce9b_rubric_rub_pro_association_added_.py  2025_03_28_1034-534ca7402ad0_product_brand_relation_added.py  2025_04_03_1649-1299fcec1fab_session_table_added.py  2025_04_03_2133-ec19d28aef38_session_table_added.py  903746046f3a_create_users_table.py  c11219a46735_create_users_table.py
app1/api/: __init__.py
app1/api/dependencies/: access_token.py  backend.py  strategy.py  user_manager.py  users.py
app1/api/v1/: __init__.py
app1/celery_tasks/: schemas.py  tasks.py
app1/core/: errors.py  settings.py
app1/core/auth/: __init__.py  access_token.py  fastapi_users_config.py  (+2 more)
app1/fixtures/: data.json
app1/scripts/: __init__.py  after_registration.py  convert_dates_back.py  create_superuser.py  create_user.py  delete_expired_sessions.py  delete_expired_tokens.py  mail_sender.py  pagination.py  time_converter.py
celery_home/: config.py  crontabs.py  file_config.py  settings.py
celery_home/beat_home/: beat_schedule.py  crontabs.py
prometheus/: config.py  decorators.py
tools/classes/: __init__.py  custom_settings.py
(+80 files in other folders)
