[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.8.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
asyncpg = "^0.30.0"
alembic = "^1.15.1"
python-multipart = "^0.0.20"
orjson = "^3.10.15"
gunicorn = "^23.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
httpie = "^3.2.4"
aiohttp = "^3.11.13"
fastapi-mail = "^1.4.2"
prometheus-fastapi-instrumentator = "^7.0.2"
prometheus-async = "^25.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

